--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "fastapi (>=0.115.13,<0.116.0)",
     "uvicorn (>=0.34.3,<0.35.0)",
     "aiosqlite (>=0.21.0,<0.22.0)",
-    "pydantic[email] (>=2.11.7,<3.0.0)"
+    "pydantic[email] (>=2.11.7,<3.0.0)",
+    "aiohttp (>=3.12.13,<4.0.0)"
 ]
 
 
